--- a/style.css
+++ b/style.css
@@ -9,16 +9,47 @@ body {
     color: white;
     padding: 1em;
   }
-  
+  main {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1em;
+  }
   nav ul {
     display: flex;
     list-style: none;
     gap: 1em;
     padding: 0;
   }
-  
+  /* Базовый вид */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.burger {
+  display: none;
+  font-size: 2em;
+  cursor: pointer;
+}
+
+/* Мобильный вид */
+@media (max-width: 767px) {
+  .burger {
+    display: block;
+  }
+
+  .nav-links {
+    display: none; /* спрячем меню */
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 1em;
+  }
+}
+
   .cards {
     display: flex;
+    flex-wrap: wrap;
     gap: 1em;
     padding: 1em;
   }
@@ -27,5 +58,19 @@ body {
     background: #eee;
     padding: 1em;
     flex: 1;
+  }
+  
+  /* Планшет: 2 карточки в ряд */
+  @media (max-width: 1199px) and (min-width: 768px) {
+    .card {
+      flex: 1 1 calc(50% - 1em);
+    }
+  }
+  
+  /* Мобильный: 1 карточка */
+  @media (max-width: 767px) {
+    .card {
+      flex: 1 1 100%;
+    }
   }
   
